# agentic-sdlc-forge

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  start_llm.sh
.forge/: README.md  architecture_map.md  config.example.toml  git_flow.md  kotlin-gradle.toml  node-pnpm.toml
.forge/mocks_data/: architecture_android_app.md  architecture_kotlin_backend.md  architecture_python_service.md
.forge/personas/: executor.md  orchestrator.md  reporter.md
.githooks/: pre-commit
migrations/: migrate-claude-to-aider.sh  migrate_claude_to_aider.py
src/forge/: __init__.py  aider_runner.py  cli.py  config.py  event_log.py  file_tree.py  git_ops.py  init_scaffold.py  interview.py  personas.py  pricing.py  router.py  runner.py  schemas.py  state.py
src/forge/agents/: __init__.py  architect.py  executor.py  orchestrator.py  planner.py  reporter.py  verifier.py
src/forge/llm/: __init__.py  anthropic_client.py  base.py  errors.py  factory.py  ollama_client.py
src/forge/templates/: env.example
src/forge/templates/forge_dir/knowledge/: architecture.md.template
src/forge/templates/forge_dir/personas/: architect.md  executor.md  planner.md  verifier.md
src/forge/templates/forge_dir/presets/: android.toml  kmp.toml  python.toml
tests/: test_aider_runner.py  test_architect.py  test_cli.py  test_cli_init.py  test_cli_stage7.py  test_config.py  test_event_log.py  test_executor.py  test_file_tree.py  test_git_ops.py  test_init_scaffold.py  test_interview.py  test_llm_anthropic.py  test_llm_factory.py  test_llm_ollama.py  test_orchestrator.py  test_personas.py  test_planner.py  test_pricing.py  test_reporter.py  test_router.py  test_router_contract.py  test_runner.py  test_schemas.py  test_state.py  test_verifier.py
