[project]
name = "agentic-sdlc-forge"
version = "0.1.0"
description = "Multi-agent SDLC orchestration runtime"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jarosław Skrzypczak" },
]
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

# Future CLI entry point — wired up in Stage 8
# [project.scripts]
# forge = "forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
# Pydantic models named 'Test*' (e.g. TestReport) are not test classes.
python_classes = "Test"
filterwarnings = [
    "ignore:cannot collect test class 'TestReport':pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter
