[project]
name = "agentic-sdlc-forge"
version = "0.1.0"
description = "Multi-agent SDLC orchestration runtime"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jarosław Skrzypczak" },
]
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "anthropic>=0.40",
    "httpx>=0.27",
]

# Future CLI entry point — wired up in Stage 8
[project.scripts]
forge = "forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]
# Non-.py files under src/forge (templates/, presets/, persona markdowns)
# are picked up automatically by `packages` — hatch includes everything
# under the listed directory by default. If we ever add a top-level
# exclude that catches templates by accident, we'll need force-include
# back here.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
# Pydantic models named 'Test*' (e.g. TestReport) are not test classes.
python_classes = "Test"
filterwarnings = [
    "ignore:cannot collect test class 'TestReport':pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter